[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://game_objects/ui/Menu.gd" type="Script" id=2]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Buttons" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="PlayButton" type="Button" parent="Buttons"]
anchor_left = 0.4375
anchor_top = 0.413
anchor_right = 0.562
anchor_bottom = 0.533
margin_left = 430.5
margin_top = 239.48
margin_right = 525.52
margin_bottom = 274.68
text = "Play"

[node name="HelpButton" type="Button" parent="Buttons"]
anchor_left = 0.437
anchor_top = 0.64
anchor_right = 0.562
anchor_bottom = 0.747
margin_left = 430.52
margin_top = 358.4
margin_right = 525.52
margin_bottom = 394.12
text = "Help"

[node name="QuitButton" type="Button" parent="Buttons"]
anchor_left = 0.4375
anchor_top = 0.853
anchor_right = 0.562
anchor_bottom = 0.96
margin_left = 430.5
margin_top = 477.88
margin_right = 525.52
margin_bottom = 513.6
text = "Quit"

[node name="HelpDialog" type="AcceptDialog" parent="."]
visible = true
anchor_left = 0.289062
anchor_top = 0.306667
anchor_right = 0.693
anchor_bottom = 0.713
margin_right = 0.367981
margin_bottom = 0.200165
window_title = "Help!"
dialog_text = "Left and right arrow keys to move.

Space to jump.

Aim up and down with up and fown arrow keys.

Survive"
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="Buttons/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Buttons/HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="pressed" from="Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]
